# forest-pulse

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  METHODOLOGY.md  PRD.md  README.md  TECH_STACK.md  progress.txt  pyproject.toml
.claude/research/: README.md  icgc_laz_urls.md  icgc_lidar.md  ndvi_infrared.md
.github/: CONTRIBUTING.md
autoresearch/: README.md  eval.py  eval_gold.py  eval_lidar.py  program.md  train.py
data/montseny/: annotations_raw.json  patches_metadata.csv
docs/decisions/: ARCH-model-architecture.md  DATA-pipeline-dataset.md  EVAL-evaluation-strategy.md  INDEX.md  SYS-system-design.md  TRAIN-training-strategy.md
docs/paper/: FIGURES.md  SUBMISSION.md  paper.md
scripts/: apply_filters_demo.py  bootstrap_annotations.py  demo.py  download_data.py  download_lidar.py  download_montseny.py  full_pipeline_demo.py  inventory_montseny.py  prepare_rfdetr_dataset.py  prepare_sample.py  probe_lidar_peaks.py  run_lidar_eval.py  sam2_smoke_test.py  self_train.py  sweep_confidence.py  tile_orthophoto.py  train_classifier.py
scripts/_archive/: README.md  bootstrap_annotations.py  lidar_smoke_test.py  prepare_gold_eval.py  prepare_sample.py  self_train.py  teacher_annotations.py  test_self_train.py  train_classifier.py
src/forest_pulse/: __init__.py  allometry.py  classifier.py  crowns.py  detect.py  device.py  export.py  georef.py  health.py  lidar.py  ndvi.py  patches.py  segment.py  species.py  temporal.py  visualize.py
tests/: test_allometry.py  test_classifier.py  test_crowns.py  test_detect_lidar_first.py  test_detect_sliced.py  test_eval_lidar.py  test_export.py  test_filters.py  test_georef.py  test_health.py  test_lidar_features.py  test_patches.py  test_segment.py  test_species.py  test_temporal.py
(+31 files in other folders)
